--- a/css/application.css
+++ b/css/application.css
@@ -8022,6 +8022,11 @@ button.close {
   width: 1px;
 }
 
+video {
+  max-width: 100%;
+  height: auto;
+}
+
 .slogan, .panel--centered, .panel--padded--centered, [class^="btn--"] {
   text-align: center;
 }
